--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,8 +4,9 @@
 body {
   font-family: "poppins", sans-serif;
   color: #585a61;
+  /* overflow: hidden; */
 }
-
+/* 
 a {
   color: #5777ba;
   text-decoration: none;
@@ -23,37 +24,7 @@ h4,
 h5,
 h6 {
   font-family: "Raleway", sans-serif;
-}
-
-/*--------------------------------------------------------------
-  # Back to top button
-  --------------------------------------------------------------*/
-.back-to-top {
-  position: fixed;
-  visibility: hidden;
-  opacity: 0;
-  right: 15px;
-  bottom: 15px;
-  z-index: 996;
-  background: #5777ba;
-  width: 40px;
-  height: 40px;
-  border-radius: 50px;
-  transition: all 0.4s;
-}
-.back-to-top i {
-  font-size: 24px;
-  color: #fff;
-  line-height: 0;
-}
-.back-to-top:hover {
-  background: #748ec6;
-  color: #fff;
-}
-.back-to-top.active {
-  visibility: visible;
-  opacity: 1;
-}
+} */
 
 /*--------------------------------------------------------------
   # Disable aos animation delay on mobile devices
@@ -70,35 +41,20 @@ h6 {
   transition: all 0.5s;
   z-index: 997;
   transition: all 0.5s;
-  padding: 15px 0;
-}
-#header.header-transparent {
-  background: transparent;
-}
-#header.header-scrolled {
-  background: rgba(6, 40, 235, 0.95);
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-}
-#header .logo h1 {
-  font-size: 30px;
-  margin: 0;
-  line-height: 1;
-  font-weight: 400;
-  letter-spacing: 2px;
-}
-#header .logo h1 a,
-#header .logo h1 a:hover {
-  text-decoration: none;
-}
-#header .logo img {
-  margin: 0;
-  max-height: 40px;
-}
+  padding: 19px 0;
+  background-color: #0047e0;
 
+}
+#header a {
+  color: #ffffff;
+  font-weight: 4500;
+  text-decoration: none
+  ;
+}
 /*--------------------------------------------------------------
   # Navigation Menu
   --------------------------------------------------------------*/
-/**
+/* *
   * Desktop Navigation 
   */
 .navbar {
@@ -315,258 +271,46 @@ h6 {
   --------------------------------------------------------------*/
 #features h3{
   font-weight: 900;
-  font-family:  sans-serif;
-  font-size: 2.8em;}
-/* }
-#features .row h4{
-  /* margin: 0em 1em; */
-  /* padding: 0em 1em; */
+  font-family:  "Opens Sans" sans-serif;
+  font-size: 2.8em;
+}
+
 #iconFeatures{
   width: 1.5em;
   margin-right: 0.2em;}
 /* }
-#features .row  p{
-  /* margin-left: 1em; */
 
-/*--------------------------------------------------------------
-  # Details
-  --------------------------------------------------------------*/
-.details .content + .content {
-  margin-top: 100px;
+/* --------------------------------------
+Money therapy section
+----------------------------------------*/
+
+#Money_Transfer_Therapy{
+  background-color: #d47b0610;
 }
-.details .content h3 {
-  font-weight: 700;
-  font-size: 32px;
-  color: #47536e;
-}
-.details .content ul {
-  list-style: none;
-  padding: 0;
-}
-.details .content ul li {
-  padding-bottom: 10px;
-}
-.details .content ul i {
-  font-size: 24px;
-  padding-right: 2px;
-  color: #5777ba;
-  line-height: 0;
-}
-.details .content p:last-child {
-  margin-bottom: 0;
+#therapy-bot{
+  /* display: none; */
+  margin-top: -4em;
 }
 
-/*--------------------------------------------------------------
-  # Gallery
-  --------------------------------------------------------------*/
-.gallery {
-  overflow: hidden;
-}
-.gallery .swiper-slide {
-  transition: 0.3s;
-}
-.gallery .swiper-pagination {
-  margin-top: 20px;
-  position: relative;
-}
-.gallery .swiper-pagination .swiper-pagination-bullet {
-  width: 12px;
-  height: 12px;
-  background-color: #fff;
-  opacity: 1;
-  border: 1px solid #5777ba;
-}
-.gallery .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #5777ba;
-}
-.gallery .swiper-slide-active {
-  text-align: center;
-}
-@media (min-width: 992px) {
-  .gallery .swiper-wrapper {
-    padding: 40px 0;
-  }
-  .gallery .swiper-slide-active {
-    border: 6px solid #5777ba;
-    padding: 4px;
-    background: #fff;
-    z-index: 1;
-    transform: scale(1.2);
-    margin-top: 10px;
-    border-radius: 25px;
-  }
-}
+/* ---------------------------------------
+Bohikor section
+-------------------------------------------*/
 
-/*--------------------------------------------------------------
-  # Testimonials
-  --------------------------------------------------------------*/
-.testimonials .testimonials-carousel,
-.testimonials .testimonials-slider {
-  overflow: hidden;
-}
-.testimonials .testimonial-item {
-  box-sizing: content-box;
-  padding: 30px 30px 30px 60px;
-  margin: 30px 10px 30px 50px;
-  min-height: 200px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.08);
-  position: relative;
-  background: #fff;
-}
-.testimonials .testimonial-item .testimonial-img {
-  width: 90px;
-  border-radius: 10px;
-  border: 6px solid #fff;
-  position: absolute;
-  left: -45px;
-}
-.testimonials .testimonial-item h3 {
-  font-size: 18px;
-  font-weight: bold;
-  margin: 10px 0 5px 0;
-  color: #111;
-}
-.testimonials .testimonial-item h4 {
-  font-size: 14px;
-  color: #999;
-  margin: 0;
-}
-.testimonials .testimonial-item .quote-icon-left,
-.testimonials .testimonial-item .quote-icon-right {
-  color: #e8ecf5;
-  font-size: 26px;
-}
-.testimonials .testimonial-item .quote-icon-left {
-  display: inline-block;
-  left: -5px;
-  position: relative;
-}
-.testimonials .testimonial-item .quote-icon-right {
-  display: inline-block;
-  right: -5px;
-  position: relative;
-  top: 10px;
-}
-.testimonials .testimonial-item p {
-  font-style: italic;
-  margin: 15px auto 15px auto;
-}
-.testimonials .swiper-pagination {
-  margin-top: 20px;
-  position: relative;
-}
-.testimonials .swiper-pagination .swiper-pagination-bullet {
-  width: 12px;
-  height: 12px;
-  background-color: #fff;
-  opacity: 1;
-  border: 1px solid #5777ba;
-}
-.testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #5777ba;
-}
 
-/*--------------------------------------------------------------
-  # Pricing
-  --------------------------------------------------------------*/
-.pricing .row {
-  padding-top: 40px;
-}
-.pricing .box {
-  padding: 40px;
-  margin-bottom: 30px;
-  box-shadow: 0px 0px 30px rgba(73, 78, 92, 0.15);
-  background: #fff;
-  text-align: center;
-}
-.pricing h3 {
-  font-weight: 300;
-  margin-bottom: 15px;
-  font-size: 28px;
-}
-.pricing h4 {
-  font-size: 46px;
-  color: #5777ba;
-  font-weight: 400;
-  font-family: "Open Sans", sans-serif;
-  margin-bottom: 25px;
-}
-.pricing h4 span {
-  color: #bababa;
-  font-size: 18px;
-  display: block;
-}
-.pricing ul {
-  padding: 0;
-  list-style: none;
-  color: #999;
-  text-align: left;
-  line-height: 20px;
-}
-.pricing ul li {
-  padding-bottom: 12px;
-}
-.pricing ul i {
-  color: #5777ba;
-  font-size: 18px;
-  padding-right: 4px;
-}
-.pricing ul .na {
-  color: #ccc;
-}
-.pricing ul .na i {
-  color: #ccc;
-}
-.pricing ul .na span {
-  text-decoration: line-through;
-}
-.pricing .get-started-btn {
-  background: #47536e;
-  display: inline-block;
-  padding: 8px 30px;
-  border-radius: 20px;
-  color: #fff;
-  transition: none;
-  font-size: 14px;
-  font-weight: 400;
-  font-family: "Raleway", sans-serif;
-  transition: 0.3s;
-}
-.pricing .get-started-btn:hover {
-  background: #5777ba;
-}
-.pricing .featured {
-  z-index: 10;
-  margin: -30px -5px 0 -5px;
-}
-.pricing .featured .get-started-btn {
-  background: #5777ba;
-}
-.pricing .featured .get-started-btn:hover {
-  background: #748ec6;
-}
-@media (max-width: 992px) {
-  .pricing .box {
-    max-width: 60%;
-    margin: 0 auto 30px auto;
-  }
-}
-@media (max-width: 767px) {
-  .pricing .box {
-    max-width: 80%;
-    margin: 0 auto 30px auto;
-  }
-}
-@media (max-width: 420px) {
-  .pricing .box {
-    max-width: 100%;
-    margin: 0 auto 30px auto;
-  }
-}
 
+#score-icon{
+  width: auto;
+  height: 2.5em;
+}
 /*--------------------------------------------------------------
   # Frequently Asked Questions
   --------------------------------------------------------------*/
+  #faq{
+    background-image: url('../img/fag-bg.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    /* background-color: #0047e0; */
+  } 
 .faq .accordion-list {
   padding: 0 100px;
 }
@@ -593,6 +337,7 @@ h6 {
   padding: 0 30px;
   outline: none;
   cursor: pointer;
+  text-decoration: none;
 }
 .faq .accordion-list .icon-help {
   font-size: 24px;
@@ -634,139 +379,12 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-  # Contact
-  --------------------------------------------------------------*/
-.contact .info {
-  padding: 20px 40px;
-  background: #f1f3f6;
-  color: #47536e;
-  text-align: center;
-  border: 1px solid #fff;
-}
-.contact .info i {
-  font-size: 48px;
-  color: #9fb2d8;
-  margin-bottom: 15px;
-}
-.contact .info h4 {
-  padding: 0;
-  margin: 0 0 10px 0;
-  font-size: 16px;
-  font-weight: 600;
-  text-transform: uppercase;
-  font-family: "Poppins", sans-serif;
-}
-.contact .info p {
-  font-size: 15px;
-}
-.contact .php-email-form {
-  width: 100%;
-}
-.contact .php-email-form .error-message {
-  display: none;
-  color: #fff;
-  background: #ed3c0d;
-  text-align: left;
-  padding: 15px;
-  font-weight: 600;
-}
-.contact .php-email-form .error-message br + br {
-  margin-top: 25px;
-}
-.contact .php-email-form .sent-message {
-  display: none;
-  color: #fff;
-  background: #18d26e;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-}
-.contact .php-email-form .loading {
-  display: none;
-  background: #fff;
-  text-align: center;
-  padding: 15px;
-}
-.contact .php-email-form .loading:before {
-  content: "";
-  display: inline-block;
-  border-radius: 50%;
-  width: 24px;
-  height: 24px;
-  margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
-  border-top-color: #eee;
-  -webkit-animation: animate-loading 1s linear infinite;
-  animation: animate-loading 1s linear infinite;
-}
-.contact .php-email-form label {
-  font-family: "Poppins", sans-serif;
-  margin-bottom: 5px;
-  color: #8a8c95;
-}
-.contact .php-email-form input,
-.contact .php-email-form textarea {
-  border-radius: 0;
-  box-shadow: none;
-  font-size: 14px;
-}
-.contact .php-email-form input:focus,
-.contact .php-email-form textarea:focus {
-  border-color: #5777ba;
-}
-.contact .php-email-form input {
-  padding: 10px 15px;
-}
-.contact .php-email-form textarea {
-  padding: 12px 15px;
-}
-.contact .php-email-form button[type="submit"] {
-  background: #fff;
-  border: 2px solid #5777ba;
-  padding: 10px 24px;
-  color: #5777ba;
-  transition: 0.4s;
-  border-radius: 50px;
-  margin-top: 5px;
-}
-.contact .php-email-form button[type="submit"]:hover {
-  background: #5777ba;
-  color: #fff;
-}
-@media (max-width: 1024px) {
-  .contact .php-email-form {
-    padding: 30px 15px 15px 15px;
-  }
-}
-@media (max-width: 768px) {
-  .contact .php-email-form {
-    padding: 15px 0 0 0;
-  }
-}
-@-webkit-keyframes animate-loading {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-@keyframes animate-loading {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-/*--------------------------------------------------------------
   # Footer
   --------------------------------------------------------------*/
 #footer {
   background: #fff;
   padding: 0 0 30px 0;
-  color: #47536e;
+  color: #373a41;
   font-size: 14px;
   background: #eff2f8;
 }
@@ -785,50 +403,12 @@ h6 {
   font-weight: 700;
   color: #47536e;
 }
-#footer .footer-top .footer-contact p {
-  font-size: 14px;
-  line-height: 24px;
-  margin-bottom: 0;
-  font-family: "Raleway", sans-serif;
-  color: #8a8c95;
-}
 #footer .footer-top h4 {
   font-size: 16px;
   font-weight: bold;
-  color: #47536e;
+  color: #242935;
   position: relative;
   padding-bottom: 12px;
-}
-#footer .footer-top .footer-links {
-  margin-bottom: 30px;
-}
-#footer .footer-top .footer-links ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-#footer .footer-top .footer-links ul i {
-  padding-right: 2px;
-  color: #9fb2d8;
-  font-size: 18px;
-  line-height: 1;
-}
-#footer .footer-top .footer-links ul li {
-  padding: 10px 0;
-  display: flex;
-  align-items: center;
-}
-#footer .footer-top .footer-links ul li:first-child {
-  padding-top: 0;
-}
-#footer .footer-top .footer-links ul a {
-  transition: 0.3s;
-  display: inline-block;
-  line-height: 1;
-}
-#footer .footer-top .footer-links ul a:hover {
-  text-decoration: none;
-  color: #5777ba;
 }
 #footer .footer-top .social-links a {
   font-size: 18px;
@@ -843,7 +423,16 @@ h6 {
   height: 36px;
   transition: 0.3s;
 }
-
+ #footer-leftCol  ul  li {
+  list-style: none;
+  color: #242935;
+  text-decoration: none;
+}
+#footer-leftCol  ul li a {
+  text-decoration: none;
+  color: #2429358e;
+}
+#footer .footer-top 
 .twitter {
   background: #0d919b;
 }
@@ -878,6 +467,19 @@ last footer section
 
 #lastFooter .container a {
   text-decoration: none;
-  font-family: 'poppins' sans-serif;
-  color: rgb(255, 255, 255);
+  padding: 2px;
+  color: #ffffff;
+  font-family: "Raleway", sans-serif;
+}
+
+
+
+
+/* ----------------------------------------------
+
+slider animation styling
+------------------------------------------------*/
+body .sliderImg{
+  height: auto;
+  width: 30em;
 }
