--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,27 +4,8 @@
 body {
   font-family: 'Nunito Sans', sans-serif;
   color: #585a61;
-  /* overflow: hidden; */
+  overflow-x: hidden;
 }
-/* 
-a {
-  color: #5777ba;
-  text-decoration: none;
-}
-
-a:hover {
-  color: #7b94c9;
-  text-decoration: none;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-} */
-
 /*--------------------------------------------------------------
   # Disable aos animation delay on mobile devices
   --------------------------------------------------------------*/
@@ -88,7 +69,7 @@ h6 {
 }
 .navbar .getstarted,
 .navbar .getstarted:focus {
-  background: #daa209;
+  background: #FFAC44;
   color: #fff;
   padding: 12px 25px;
   margin-left: 30px;
@@ -98,7 +79,7 @@ h6 {
 }
 .navbar .getstarted:hover,
 .navbar .getstarted:focus:hover {
-  background: #978a26;
+  background:#ffab44d2;
   color: #fff;
 }
 @media (max-width: 1366px) {
@@ -215,7 +196,7 @@ h6 {
   position: relative;
   overflow: hidden;
   padding: 140px 0 100px 0;
-  background-color: #0e59fa;
+  background-color: #3770ED;
 }
 #hero::before {
   content: "";
@@ -229,7 +210,11 @@ h6 {
 #dwn-btn {
   display: flex;
   padding: 0px;
+  height: fit-content;
   margin: 0px;
+}
+#Appleimg{
+  /* height: 5.4em; */
 }
 
 @media (max-width: 991px) {
@@ -297,8 +282,10 @@ Money therapy section
   background-color: #d47b0610;
 }
 #therapy-bot{
-  position: absolute;
-  margin-top: -5em;
+  position: relative;
+  width: 100%;
+  margin-top: -4em;
+  height: auto;
 }
 #thera-icon{
   max-width: 3em;
@@ -318,25 +305,26 @@ Bohikor section
   # Frequently Asked Questions
   --------------------------------------------------------------*/
   #faq{
-    background-image: url('../img/fag-bg.png');
+    background-image: url('../img/FAQ\ background.svg');
     background-repeat: no-repeat;
     background-size: cover;
-    /* background-color: #0047e0; */
   } 
 .faq .accordion-list {
   padding: 0 100px;
+  background-color: #ffffffe2;
+  border-radius: 20%;
 }
 .faq .accordion-list ul {
   padding: 0;
   list-style: none;
-  background-color: #ffffff48;
+  background-color: #ffffff88;
 }
 .faq .accordion-list li + li {
   margin-top: 15px;
 }
 .faq .accordion-list li {
   padding: 20px;
-  background: #fff;
+  /* background: rgb(215, 215, 215); */
   border-radius: 4px;
   position: relative;
 }
@@ -345,9 +333,10 @@ Bohikor section
   position: relative;
   font-size: 16px;
   line-height: 24px;
-  font-weight: 500;
+  font-weight: 9  00;
   padding: 0 30px;
   outline: none;
+  color: rgb(20, 17, 17);
   cursor: pointer;
   text-decoration: none;
 }
@@ -368,6 +357,8 @@ Bohikor section
 .faq .accordion-list p {
   margin-bottom: 0;
   padding: 10px 0 0 0;
+  color: #3e3f44ac;
+  font-weight: 700;
 }
 .faq .accordion-list .icon-show {
   display: none;
