--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   color: #585a61;
   overflow-x: hidden;
 }
@@ -23,13 +23,11 @@ body {
   transition: all 0.5s;
   padding: 19px 0;
   background-color: #0047e0;
-
 }
 #header a {
   color: #ffffff;
   font-weight: 4500;
-  text-decoration: none
-  ;
+  text-decoration: none;
 }
 /*--------------------------------------------------------------
   # Navigation Menu
@@ -69,7 +67,7 @@ body {
 }
 .navbar .getstarted,
 .navbar .getstarted:focus {
-  background: #FFAC44;
+  background: #ffac44;
   color: #fff;
   padding: 12px 25px;
   margin-left: 30px;
@@ -79,7 +77,7 @@ body {
 }
 .navbar .getstarted:hover,
 .navbar .getstarted:focus:hover {
-  background:#ffab44d2;
+  background: #ffab44d2;
   color: #fff;
 }
 @media (max-width: 1366px) {
@@ -196,7 +194,7 @@ body {
   position: relative;
   overflow: hidden;
   padding: 140px 0 100px 0;
-  background-color: #3770ED;
+  background-color: #3770ed;
 }
 #hero::before {
   content: "";
@@ -213,7 +211,7 @@ body {
   height: fit-content;
   margin: 0px;
 }
-#Appleimg{
+#Appleimg {
   /* height: 5.4em; */
 }
 
@@ -254,40 +252,40 @@ body {
 /*--------------------------------------------------------------
   #  Features
   --------------------------------------------------------------*/
-#features h3{
+#features h3 {
   font-weight: 900;
   font-size: 2.8em;
 }
 
-#iconFeatures{
+#iconFeatures {
   width: 1.5em;
   margin-right: 0.2em;
 }
 
-#row  h4 {
+#row h4 {
   font-size: 1.1em;
   font-weight: 700;
 }
-  #row  p {
-    padding:10px;
-    margin: 0px 15px;
-  }
+#row p {
+  padding: 10px;
+  margin: 0px 15px;
+}
 /* }
 
 /* --------------------------------------
 Money therapy section
 ----------------------------------------*/
 
-#Money_Transfer_Therapy{
+#Money_Transfer_Therapy {
   background-color: #d47b0610;
 }
-#therapy-bot{
+#therapy-bot {
   position: relative;
   width: 100%;
   margin-top: -4em;
   height: auto;
 }
-#thera-icon{
+#thera-icon {
   max-width: 3em;
 }
 
@@ -295,20 +293,18 @@ Money therapy section
 Bohikor section
 -------------------------------------------*/
 
-
-
-#score-icon{
+#score-icon {
   width: auto;
   height: 2.5em;
 }
 /*--------------------------------------------------------------
   # Frequently Asked Questions
   --------------------------------------------------------------*/
-  #faq{
-    background-image: url('../img/FAQ\ background.svg');
-    background-repeat: no-repeat;
-    background-size: contain;
-  } 
+#faq {
+  background-image: url("../img/FAQ\ background.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+}
 .faq .accordion-list {
   padding: 0 100px;
   background-color: #ffffffaa;
@@ -333,7 +329,7 @@ Bohikor section
   position: relative;
   font-size: 16px;
   line-height: 24px;
-  font-weight: 9  00;
+  font-weight: 9 00;
   padding: 0 30px;
   outline: none;
   color: rgb(20, 17, 17);
@@ -420,7 +416,7 @@ Bohikor section
 #leftsidefooter {
   list-style: none;
 }
-#leftsidefooter a{
+#leftsidefooter a {
   text-decoration: none;
   padding: 0%;
   margin: 0%;
@@ -464,14 +460,12 @@ last footer section
   color: #ffffff;
 }
 
-
-
-
 /* ----------------------------------------------
 
 slider animation styling
 ------------------------------------------------*/
-body .sliderImg{
+body .sliderImg {
   height: auto;
   width: 30em;
 }
+
